@startuml database-design-demo-streaming
title Demo streaming — core relational model (PostgreSQL)

skinparam handwritten false
skinparam backgroundColor #fafafa
skinparam defaultFontColor #222222
skinparam entityBackgroundColor #ffffff
skinparam entityBorderColor #444444
skinparam arrowColor #333333

legend top left
  Stream key exists **before** a live: **stream_keys** (OBS secret) then **stream_publish_sessions** (each go-live).
  Media abstraction: media_providers + media_ingest_bindings.
  stream_publish_sessions.status: created, live, ended, failed.
  view_sessions: viewer_user_id or non-empty viewer_ref (guest).
  Chat / gifts / wallet: not shown.
end legend

entity "users" as u {
  * id : bigserial <<PK>>
  --
  * email : text <<UK>>
  display_name : text
  created_at : timestamptz
}

entity "media_providers" as mp {
  * id : bigserial <<PK>>
  --
  * code : text <<UK>>
  display_name : text
  api_base_url : text
  config : jsonb
  created_at : timestamptz
}

entity "stream_keys" as sk {
  * id : bigserial <<PK>>
  --
  * owner_user_id : bigint <<FK>>
  * stream_key_secret : text <<UK>>
  * media_provider_id : bigint <<FK>>
  label : text
  created_at : timestamptz
  revoked_at : timestamptz
}

entity "stream_publish_sessions" as pub {
  * id : bigserial <<PK>>
  --
  * streamer_user_id : bigint <<FK>>
  * stream_key_id : bigint <<FK>>
  * media_provider_id : bigint <<FK>>
  title : text
  status : text
  playback_url_cdn : text
  created_at : timestamptz
  started_at : timestamptz
  ended_at : timestamptz
}

entity "media_ingest_bindings" as mib {
  * id : bigserial <<PK>>
  --
  * publish_session_id : bigint <<FK>> <<UK>>
  provider_publish_id : text
  provider_vhost : text
  provider_app : text
  ingest_query_param : text
  record_local_uri : text
  last_callback_action : text
  last_callback_at : timestamptz
  provider_context : jsonb
  created_at : timestamptz
  updated_at : timestamptz
}

entity "view_sessions" as view {
  * id : bigserial <<PK>>
  --
  * publish_session_id : bigint <<FK>>
  viewer_user_id : bigint <<FK>>
  viewer_ref : text
  client_type : text
  joined_at : timestamptz
  left_at : timestamptz
  last_seen_at : timestamptz
}

u ||--o{ sk : "owns keys"
mp ||--o{ sk : "ingest stack"
sk ||--o{ pub : "many sessions\nper key (each live)"
u ||--o{ pub : "streamer (denormalized)"
mp ||--o{ pub : "ingest stack"
pub ||--o| mib : "0..1 provider-native\nstate (webhook / adapter)"
u ||--o{ view : "viewer (optional)"
pub ||--o{ view : "one live / many viewers"

note bottom of sk
  Created **before** first publish session (dashboard: Create stream key).
  **stream_key_secret** is what OBS uses as Stream Key; rotate via **revoked_at** + new row.
end note

note bottom of pub
  One row per **go-live** attempt; references the **stream_key** in use.
  **streamer_user_id** matches **stream_keys.owner_user_id** for this row (enforce in app).
  **playback_url_cdn** often derived from stream_key_secret or session id + CDN base.
end note

note bottom of mp
  Catalog of ingest vendors: **code** e.g. srs.
  **config**: non-secret defaults only; secrets in env / vault.
end note

note bottom of mib
  SRS (or other) webhook fields + **provider_context** JSON.
end note

note bottom of view
  Logged-in: viewer_user_id set. Guest: viewer_ref non-empty.
end note

@enduml
